<resources>
    <string name="app_name">COVID19 Inequity Survey - Urdu</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="contactnum"> رابطہ نمبر </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="sectiona_mainheading">سیکشن ـ اے: ذاتی معلومات</string>
    <string name="sectionb_mainheading">سیکشن ـ بی:  سماجی آبادیاتی خصوصیات</string>
    <string name="sectionc_mainheading">سیکشن سی: سے پہلے پیشہ ورانہ / کام کی خصوصیاتCOVID-19 </string>
    <string name="sectiond_mainheading">سیکشن ڈی:  اسکول کی خصوصیات (اسکول / کالج / یونیورسٹی کا مقام</string>
    <string name="sectione_mainheading">سیکشن ای: صحت کی عمومی خصوصیات</string>
    <string name="sectionf_mainheading">سیکشن ایف: حمل</string>
    <string name="sectiong_mainheading">سیکشن جی: دس سال سے کم عمربچے</string>
    <string name="sectionh_mainheading">سیکشن ایچ: کووڈـ19 کی مخصوص معلومات</string>
    <string name="sectioni_mainheading">سیکشن آئی: صحت اور جذباتی رویوں سے متعلق معلومات</string>
    <string name="sectionj_mainheading">سیکشن جے:  کوویڈ 19 کے لاک ڈاؤن کے دوران (مارچ کے وسط سے مئی 2020 کے وسط تک) کی صورتحال</string>
    <string name="sectionk_mainheading">سیکشن کے: کوویڈ 19 کے لاک ڈاؤن میں نرمی (مئی 2020 کے وسط اور آگے تک) کی صورتحال</string>
    <string name="sectionl_mainheading">سیکشن ایل:  سماجی سرمایہ</string>
    <string name="a01">انٹرویو کی تاریخ</string>
    <string name="a02">انٹرویو شروع کرنے کا وقت(24 گھنٹوں میں)</string>
    <string name="a03">انٹرویو لینے والے کا کوڈ</string>
    <string name="a04">صوبہ؟</string>
    <string name="a0401">خیبر پختونخوا </string>
    <string name="a0402">پنجاب</string>
    <string name="a0403">سندھ</string>
    <string name="a0404">بلوچستان</string>
    <string name="a0405">فاٹا</string>
    <string name="a0406">آزاد جموں کشمیر </string>
    <string name="a0407">گلگت بلتستان </string>
    <string name="a05">ضلع؟</string>
    <string name="a05a">فرد کی شناختی  آئی ڈی</string>
    <string name="a05b">کیا گھر اور فرد کی شناخت ہو گئی</string>
    <string name="a05b1">ہاں</string>
    <string name="a05b2">نہیں</string>
    <string name="a06">  گھرانے کے انٹرویوکا نتیجہ: نوٹ: انٹرویو مکمل نہ ہونے کی صورت میں سپروائزر سے رابطہ کریں۔ </string>
    <string name="a06_info"> انٹرویو مکمل نہ ہونے  کی صورت میں سپروائزر سے رابطہ کریں ۔ </string>
    <string name="a0601">مکمل</string>
    <string name="a0602">فرد کی شناخت نہیں ہو سکی</string>
    <string name="a0603">گھر کی شناخت نہیں ہو سکی </string>
    <string name="a0604">گھر بند ہے</string>
    <string name="a0605">گھر میں کوئی اہل جواب دہندہ موجود نہیں</string>
    <string name="a0606">گھر طویل مدت سے بند ہے</string>
    <string name="a0607">انکار کردیا </string>
    <string name="a0608">فون پر رابطہ نہیں ہوسکا </string>
    <string name="a0696">دیگر(وضاحت کریں)</string>
    <string name="a07">کیا میں انٹرویو شروع کر سکتا /سکتی ہوں؟</string>
    <string name="a0701">ہاں</string>
    <string name="a0702">نہیں</string>
    <string name="a08"> پورا نام؟</string>
    <string name="a09">باپ/شوہر کا نام؟</string>
    <string name="a10">رہائشی پتہ (جنوری -2020 کے بعد سے) شہر / گاؤں کے ساتھ؟</string>
    <string name="a11">رابطہ نمبر؟</string>
    <string name="a12">رہائشی علائقہ؟</string>
    <string name="a1201">شہری </string>
    <string name="a1202">دیہی</string>
    <string name="a13">آپ کی تاریخ پیدائش کیا ہے؟</string>
    <string name="a13dd">دن</string>
    <string name="a13mm">مہینہ</string>
    <string name="a13yy">سال</string>
    <string name="a14">آپ کی عمر کتنی ہے؟</string>
    <string name="a14mm">مہینہ</string>
    <string name="a14yy">سال</string>
    <string name="a15">آپ کی جنس کیا ہے؟</string>
    <string name="a1501">مرد(لڑکا) </string>
    <string name="a1502">عورت(لڑکی) </string>
    <string name="a1503">تیسری جنس </string>
    <string name="a16">آپ کون سی قومیت سے تعلق رکھتے ہیں؟</string>
    <string name="a1601">سندھی</string>
    <string name="a1602">اردو</string>
    <string name="a1603">پنجابی</string>
    <string name="a1604">بلوچ/براہوی</string>
    <string name="a1605">پشتون</string>
    <string name="a1606">سرائیکی </string>
    <string name="a1607">کشمیری</string>
    <string name="a1608">ہزارہ </string>
    <string name="a1609">برشو</string>
    <string name="a16096">دیگر(وضاحت کریں) </string>
    <string name="a17">آپ کی ذات کیا ہے؟</string>
    <string name="a18">آپ کس مذہب کے پیروکارہیں؟</string>
    <string name="a1801">مسلمان </string>
    <string name="a1802">عیسائی </string>
    <string name="a1803">ہندو </string>
    <string name="a1804">سکھ </string>
    <string name="a18096">دیگر(وضاحت کریں)</string>
    <string name="a19">آپ کی زیادہ سے زیادہ تعلیم کیا ہے؟</string>
    <string name="a1901">کوئی تعلیم نہیں </string>
    <string name="a1902">صرف قرآنی تعلیم </string>
    <string name="a1903">پرائمری اسکول (1-4 سال) </string>
    <string name="a1904">پرائمری اسکول (5 سال) مکمل </string>
    <string name="a1905">سیکنڈری اسکول (6-9 سال) </string>
    <string name="a1906">سیکنڈری اسکول (10 سال) مکمل </string>
    <string name="a1907">ہائی اسکول (11-12 سال) </string>
    <string name="a1908">بیچلر ڈگری (14 سال) </string>
    <string name="a1909">ماسٹرزڈگری (16 سال) </string>
    <string name="a1910">پی ایچ ڈی </string>
    <string name="a1911">تکنیکی تعلیم </string>
    <string name="a19096">دیگر(وضاحت کریں</string>
    <string name="a20">آپ کی ازدواجی حیثیت کیا ہے؟</string>
    <string name="a2001">غیرشادی شدہ </string>
    <string name="a2002">شادی شدہ </string>
    <string name="a2003">طلاق یافتہ </string>
    <string name="a2004">الگ ہونا </string>
    <string name="a2005">بیوہ/رنڈوا</string>
    <string name="a21"> آپ کا بنیادی پیشہ تجارت کونسا ہے؟</string>
    <string name="a2101">پیشہ ور (اکاؤنٹنٹ، انجینئر، ڈاکٹر) </string>
    <string name="a2102">انتظامی اور تکنیکی/انٹرمیڈیٹ مارکیٹنگ اور سیلز مینیجرز، اساتذہ، صحافی، نرسیں) </string>
    <string name="a2103">غیر دستی ہنر مند (کلرکس ، دکان کے معاونین ، کیشیئر) </string>
    <string name="a2104">دستی ہنر مند (ترخان، ڈرائیور، باورچی) </string>
    <string name="a2105">جزوی طور پر ہنرمند (سیکیورٹی گارڈز، مشین آپریٹرز، کسان) </string>
    <string name="a2106">غیر ہنر مند (مزدور، کلینر) </string>
    <string name="a2107">طالب علم </string>
    <string name="a2108">بے روزگار </string>
    <string name="a2109">گھریلو خاتون </string>
    <string name="a2110">پری اسکول </string>
    <string name="a2111">چائلڈ لیبر(15 سال سے کم کام کرنے والا بچہ) </string>
    <string name="a21096">دیگر(وضاحت کریں</string>
    <string name="a22">آپ کا مخصوص پیشہ(پوزیشن، عہدہ اور تنظیم کے نام سمیت) کیا ہے؟</string>
    <string name="a22pos">عہدہ</string>
    <string name="a22org">ادارے کا نام </string>
    <string name="a23">کیا آپ جنوری 2020 کے بعد جیل میں یا قانون نافذ کرنے والے اداروں کی تحویل میں رہے ہیں؟</string>
    <string name="a2301">ہاں</string>
    <string name="a2302">نہیں</string>
    <string name="b01">کیا پاکستان کے علاوہ آپ کے پاس کسی اور ملک کی  شہریت ہے یا بیرون ملک مقیم ہیں؟</string>
    <string name="b0101">ہاں</string>
    <string name="b0102">نہیں</string>
    <string name="b02">کون سا ملک؟</string>
    <string name="b03">پاکستان آنے کی وجہ؟</string>
    <string name="b0301">کام </string>
    <string name="b0302">کنبہ </string>
    <string name="b0303">سیاحت </string>
    <string name="b0304">پناہ گزین </string>
    <string name="b0305">اب یہاں آباد ہیں </string>
    <string name="b03096">دیگر(وضاحت کریں</string>
    <string name="b04">آپ جس گھر میں رہتے ہیں اس کے مالک ہیں یا کرایہ دار ہیں؟</string>
    <string name="i01">کووڈـ19 کے دوران کیا آپ نے  اس صورتحال سے پریشانی محسوس کی؟</string>
    <string name="i0101">ہاں</string>
    <string name="i0102">نہیں</string>
    <string name="i02">کووڈـ19 کے دوران کیا آپ نے اس  صورتحال سے نفسیاتی دباو یا گھبراہٹ محسوس کی؟</string>
    <string name="i0201">ہاں</string>
    <string name="i0202">نہیں</string>
    <string name="i03">آپ کو کتنی بار تناؤ، بے چینی، گھبراہٹ یا پریشانی کا سامنا کرنا پڑا جس کی وجہ سے آپ کو سونے میں دشواری محسوس ہوئی؟</string>
    <string name="i0301">بہت زیادہ </string>
    <string name="i0302">کبھی کبھی </string>
    <string name="i0303">کبھی نہیں </string>
    <string name="i03098">معلوم نہیں </string>
    <string name="i04">ان میں سے کس معاملے نے آپ کو تناؤ دیا؟  کہ میں یا میرے گھر والوں میں سے کوئی/کسی کو:</string>
    <string name="i0401">کورونا ہے یا ہوسکتا ہے </string>
    <string name="i0402">کورونا کی وجہ سے موت ہوئی/سکتی ہے </string>
    <string name="i0403">ہنگامی حالات میں/ لاک ڈاؤن کے دوران خوراک کی قلت </string>
    <string name="i0404">ہنگامی حالات کے دوران مطلوبہ طبی امداد حاصل نہ کرسکے </string>
    <string name="i0405">کام/روزگار چھوٹ گیا یا آمدنی کم ہوگئی </string>
    <string name="i0406">اسکول میں/اس سمسٹر/سال میں پیچھے رہ گیا </string>
    <string name="i0407">کچھ نہیں </string>
    <string name="i04096">دیگر(وضاحت کریں) </string>
    <string name="i05">کووڈـ19 کی صورتحال کے دوران، کیا آپ کو یا آپ کے گھر کے کسی فرد کو کھانے کے کھانے کی مقدار کو محدود کرنا پڑا؟</string>
    <string name="i0501">نہیں </string>
    <string name="i0502">ہاں، خوراک خریدنے کے لئے رقم کی کمی کی وجہ سے </string>
    <string name="i0503">ہاں، گھر میں خوراک کی کمی کی وجہ سے </string>
    <string name="i0504">ہاں، کیونکہ مارکیٹ میں خوراک کی قلت ہے </string>
    <string name="i0505">ہاں، خوراک کی قیمتیں زیادہ ہونے کی وجہ سے </string>
    <string name="i06">آپ اپنے نیند کی موجودہ عادات کا معمول کے نیند کی عادات سے کیسے موازنہ کریں گے؟</string>
    <string name="i0601">بدتر </string>
    <string name="i0602">کوئی فرق نہیں </string>
    <string name="i0603">بہتر </string>
    <string name="i07">کیا آپ کو اپنے خاندان/معاشرے کی طرف سے کسی بدنامی یا رسوائی کا سامنا کرنا پڑا؟</string>
    <string name="i0701">ہاں</string>
    <string name="i0702">نہیں</string>
</resources>