<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.mi_covid.ui.sections.SectionIActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarSize="10dip"
        tools:context=".ui.Myactivity">

        <LinearLayout
            android:id="@+id/fldGrpSectionI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--i01  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i01" />

                    <RadioGroup
                        android:id="@+id/i01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0101"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0101" />

                        <RadioButton
                            android:id="@+id/i0102"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0102" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i02  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i02" />

                    <RadioGroup
                        android:id="@+id/i02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0201" />

                        <RadioButton
                            android:id="@+id/i0202"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0202" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i03  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i03" />

                    <RadioGroup
                        android:id="@+id/i03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0301"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0301" />

                        <RadioButton
                            android:id="@+id/i0302"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0302" />

                        <RadioButton
                            android:id="@+id/i0303"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0303" />

                        <RadioButton
                            android:id="@+id/i03098"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i03098" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i04  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i04" />

                    <RadioGroup
                        android:id="@+id/i04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0401"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0401" />

                        <RadioButton
                            android:id="@+id/i0402"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0402" />

                        <RadioButton
                            android:id="@+id/i0403"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0403" />

                        <RadioButton
                            android:id="@+id/i0404"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0404" />

                        <RadioButton
                            android:id="@+id/i0405"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0405" />

                        <RadioButton
                            android:id="@+id/i0406"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0406" />

                        <RadioButton
                            android:id="@+id/i0407"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0407" />

                        <RadioButton
                            android:id="@+id/i04096"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i04096" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i05  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i05" />

                    <RadioGroup
                        android:id="@+id/i05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0501"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0501" />

                        <RadioButton
                            android:id="@+id/i0502"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0502" />

                        <RadioButton
                            android:id="@+id/i0503"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0503" />

                        <RadioButton
                            android:id="@+id/i0504"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0504" />

                        <RadioButton
                            android:id="@+id/i0505"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0505" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i06  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i06" />

                    <RadioGroup
                        android:id="@+id/i06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0601"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0601" />

                        <RadioButton
                            android:id="@+id/i0602"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0602" />

                        <RadioButton
                            android:id="@+id/i0603"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0603" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--i07  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVi07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/i07" />

                    <RadioGroup
                        android:id="@+id/i07"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/i0701"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0701" />

                        <RadioButton
                            android:id="@+id/i0702"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i0702" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>