<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.aku.hassannaqvi.mi_covid.ui.other.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.mi_covid.ui.other.EndingActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fldGrpEnd"

            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <!-- a06  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVa06"
                style="@style/cardView">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/qtxt_a06"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_a06"
                            android:text="@string/a06" />

                        <TextView
                            android:id="@+id/q_a06"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_a06"
                            android:layout_alignBottom="@id/qtxt_a06"
                            android:text="@string/Q_a06" />

                    </RelativeLayout>

                    <!--Status-->
                    <TextView
                        style="@style/info"
                        android:text="@string/a0601" />

                    <RadioGroup
                        android:id="@+id/a06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/a0601"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0602" />

                        <RadioButton
                            android:id="@+id/a0602"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0602" />

                        <RadioButton
                            android:id="@+id/a0603"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0603" />

                        <RadioButton
                            android:id="@+id/a0604"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0604" />

                        <RadioButton
                            android:id="@+id/a0605"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0605" />

                        <RadioButton
                            android:id="@+id/a0606"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0606" />

                        <RadioButton
                            android:id="@+id/a0607"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a0607" />

                        <RadioButton
                            android:id="@+id/a0696"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/a0696" />

                        <EditText
                            android:id="@+id/a0696x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/a0696"
                            android:maxLength="40"
                            android:text='@{a0696.checked? a0696x.getText().toString(): ""}'
                            android:visibility='@{a0696.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--ENDBUTTON linearlayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorPrimary"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="End Interview"
                    android:textColor="@color/white" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>